vehicle model 추가
